fixed minor layout bugs

--- a/sass/_loader.sass
+++ b/sass/_loader.sass
@@ -13,7 +13,7 @@
     @for $i from 1 through 3
       &:nth-child(#{ $i })
         animation: jump 660ms $bezier infinite
-          delay: calc(50ms * #{ $i })
+          delay: #{ 50ms * $i }
 
 @keyframes jump
   0%, 100%
