--- a/sass/main.sass
+++ b/sass/main.sass
@@ -14,9 +14,6 @@ body
   background: $dgray
   font-family: raleway, sans-serif
 
-  display: flex
-  justify-content: center
-
   &.blocked-scroll
     overflow: hidden
 
@@ -41,7 +38,6 @@ body
 html, body
   margin: 0
   padding: 0
-  overflow-x: hidden
 
 @media screen and (max-width: $phones-to)
   .mobilehidden
