--- a/sass/mobile/_tablets.sass
+++ b/sass/mobile/_tablets.sass
@@ -6,6 +6,9 @@
       .header--block
         padding: #{ $baseline * 2 }
 
+        img#gklabel
+          width: #{ $baseline * 4 }
+
   .modal
     &--card
       width: 80%
